# ChangeLog for dev-vcs/gitserve
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Oct 2010; James Rowe <jnrowe@gmail.com> gitserve-0.2.0-r2.ebuild:
  Keyworded x86.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  22 Sep 2010; James Rowe <jnrowe@gmail.com> gitserve-0.2.0-r1.ebuild,
  gitserve-0.2.0-r2.ebuild:
  Use mirror://pypi for tarballs.

*gitserve-0.2.0-r2 (22 Sep 2010)

  22 Sep 2010; James Rowe <jnrowe@gmail.com> +gitserve-0.2.0-r2.ebuild:
  Install gitserve wrapper as git-serve. This makes it possible to call it
  as "git serve" [95].

  05 May 2010; James Rowe <jnrowe@gmail.com> -gitserve-0.2.0.ebuild,
  gitserve-0.2.0-r1.ebuild:
  Keyworded x86.

  05 May 2010; James Rowe <jnrowe@gmail.com> gitserve-0.2.0-r1.ebuild:
  Keyworded amd64.

*gitserve-0.2.0-r1 (05 Apr 2010)

  05 Apr 2010; James Rowe <jnrowe@gmail.com> +gitserve-0.2.0-r1.ebuild:
  Updated included gitweb to 1.6.4.4 [a7b].

  21 Mar 2010; James Rowe <jnrowe@gmail.com> gitserve-0.2.0.ebuild:
  Added PYTHON_DEPEND setting.

  18 Mar 2010; James Rowe <jnrowe@gmail.com> gitserve-0.2.0.ebuild:
  Updated git dependency's name.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> gitserve-0.2.0.ebuild:
  Switched to EAPI 2.

  18 Oct 2009; James Rowe <jnrowe@gmail.com> gitserve-0.2.0.ebuild:
  Converted script to use module_script_wrapper.

  14 Oct 2009; James Rowe <jnrowe@gmail.com> gitserve-0.2.0.ebuild:
  Switch to using jnrowe-pypi eclass.

  12 Jul 2009; James Rowe <jnrowe@gmail.com> gitserve-0.2.0.ebuild:
  Keyworded amd64.

  10 Jun 2009; James Rowe <jnrowe@gmail.com> gitserve-0.2.0.ebuild:
  Keyworded amd64.

  10 Jun 2009; James Rowe <jnrowe@gmail.com> gitserve-0.2.0.ebuild:
  Keyworded x86.

*gitserve-0.2.0 (07 May 2009)

  07 May 2009; James Rowe <jnrowe@gmail.com> +gitserve-0.2.0.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
