@@ -3,14 +3,13 @@ Hash: SHA1
 
 DIST gitserve-0.2.0-gitweb_1.6.4.4_update.patch.bz2 31921 RMD160 3f3ff245e658f0a9a748e1f0ed05adff1daa4ce2 SHA1 b835091ba35341fe13ded82271d29d6f5e6eb5c1 SHA256 497d6997ba95b521e5100308b50a9672ee362272245971d0657da64a9f5aa35c
 DIST gitserve-0.2.0.tar.gz 51446 RMD160 c88bab997ef319d3864fea6c380b7d5b332af53d SHA1 9996c78e201cbb8b42aa2c8dd2b7021c35a10749 SHA256 827dc9c4cdd1a5cd6788304c000475321e7e7107c64df0d96759539ab92095ce
-EBUILD gitserve-0.2.0-r1.ebuild 699 RMD160 53cfeedfe5a65aa2173a83b5e27a5b1dba3e1425 SHA1 1157374fcdc1840f6f14abe5ce298f39ba1a4941 SHA256 008b01349e7b0aeb6e6c737d257f2040a6f3d458b961f6e12195bce64f9f561d
-EBUILD gitserve-0.2.0-r2.ebuild 807 RMD160 de0988ff0b1860889bae904a94572e1e29829513 SHA1 c5fb3fd2ba894e2a4123b60dfe5f58bcbde019ec SHA256 8275cf2f09bc697c9d2b90b067ca558e9684d3d3109f61315a878a960b0d50a7
-MISC ChangeLog 1916 RMD160 aeec5958e854a2a82965e1969ef6caf03c282ec2 SHA1 cb8e443c0ddd4d5a21b7c0e522b9c057722f83b0 SHA256 ea7de00a82f540609356f0341b6d6fae7ba78c25c3b9bd7dc0761481f47e8e7a
+EBUILD gitserve-0.2.0-r2.ebuild 806 RMD160 e90c904db1762c3f3ad2ac2354015958f677cd06 SHA1 6028e47a1c18df7831bd8ff08e59453c3dd2a3ff SHA256 f91d2cf1452c2cd77669299b76780b73e1c31cae82a3366ba972452e1f3fbc77
+MISC ChangeLog 2036 RMD160 1da607840e870e5de0d080922c73daf9e35183c1 SHA1 5b575dd6a094f958b13ef8668bfc758a788b1e8d SHA256 6ede18a2d4a859c5d0155ba80ff2b82c63d7b35b4b6825dbe2fd71f66e0d3df2
 MISC metadata.xml 740 RMD160 b6fdec7699569753724e25aa3822d00606b7ca44 SHA1 4d5c912b40d3873077049362af8c58080d2bd486 SHA256 280d95147592763d802921e3fd95cabcca81b580bab33d4739b2587caacf45dc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkzB5dsACgkQzJrj3cAXR0nqZACgqFJPRHAYkVD9hOdL0rH/p8F7
-6UQAoJKwEZwn2wlqhgc9Q3tOboMRqo5q
-=xb5B
+iEYEARECAAYFAkzGP2QACgkQzJrj3cAXR0nPkACfQyLFjoiboE+tOY50xDXF5jSk
+U44An3ivKcgnJJaJoLDsWLu4x54zq+6d
+=DbSd
 -----END PGP SIGNATURE-----
