@@ -15,7 +15,7 @@ SRC_URI="mirror://pypi/${PN::1}/${PN}/${P}.tar.gz
 LICENSE="GPL-2"
 
 SLOT="0"
-KEYWORDS="~amd64 x86"
+KEYWORDS="amd64 x86"
 IUSE=""
 
 DEPEND="dev-python/setuptools"
