@@ -1,22 +1,0 @@
-dev-python/setuptools >=app-admin/eselect-python-20091230 dev-lang/python
-dev-vcs/git >=app-admin/eselect-python-20091230 dev-lang/python
-0
-mirror://pypi/g/gitserve/gitserve-0.2.0.tar.gz http://github.com/downloads/JNRowe/misc-overlay/gitserve-0.2.0-gitweb_1.6.4.4_update.patch.bz2
-
-http://github.com/jezdez/git-serve/
-GPL-2
-A helper tool for git that mimics mercurial's serve command
-amd64 x86
-distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
-
-
-
-
-2
-
-compile install postinst postrm prepare
-
-
-
-
-
