@@ -6,7 +6,7 @@ mirror://pypi/g/gitserve/gitserve-0.2.0.tar.gz http://github.com/downloads/JNRow
 http://github.com/jezdez/git-serve/
 GPL-2
 A helper tool for git that mimics mercurial's serve command
-~amd64 x86
+amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
 
 
