@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Oct 2010; James Rowe <jnrowe@gmail.com> -gitserve-0.2.0-r1.ebuild,
+  gitserve-0.2.0-r2.ebuild:
+  Keyworded amd64.
+
   22 Oct 2010; James Rowe <jnrowe@gmail.com> gitserve-0.2.0-r2.ebuild:
   Keyworded x86.
 
